<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lr_target_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_target_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target_info"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_targetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lr_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_status_target"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/target_status"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckedTextView
            android:id="@+id/checkedTrue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:text="@string/target_status_true"
            android:textColor="@color/text_color" />

        <CheckedTextView
            android:id="@+id/checkedFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="true"
            android:text="@string/target_status_false"
            android:textColor="@color/text_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lr_calender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/target_date"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CalendarView
            android:id="@+id/calendarViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent"
        android:text="@string/button_save"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>